welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:1: error: illegal start of simple expression
  while(){
        ^ColumnByColumn:8: error: ')' expected but '}' found.
} 
^