welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.code
override def run() {
  while(){
    for (i<-1 to getMondeHaute) {
      setPos(i,0)
      ecritMessage
    }
    
  }
}